# rfi-downloader

./: .bumpversion.cfg  .gitignore  MANIFEST.in  README.md  environment.yml  setup.cfg
.github/workflows/: ci.yml  codeql-analysis.yml  publish-to-pypi.yml
conda-build/: menu-windows.json  meta.yaml
conda-constructor/: construct.yaml
rfi_downloader/: __init__.py  __main__.py  application.py  applicationwindow.py  downloadmanager.py  urllistboxrow.py  urlobject.py  version.py
rfi_downloader/data/: menus-appmenu.ui  menus-common.ui
rfi_downloader/utils/: __init__.py  exceptions.py  googleanalytics.py
