[metadata]
name = rfi-downloader
version = 0.1.0
description = Batch downloader with Gtk GUI
long_description = file: README.md
long_description_content_type = text/markdown
author = Tom Schoonjans
author_email = Tom.Schoonjans@rfi.ac.uk
license = BSD 3-Clause License
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.8
url = https://github.com/RosalindFranklinInstitute/rfi-downloader
project-urls =
    GitHub = https://github.com/RosalindFranklinInstitute/rfi-downloader
    Bug-Tracker = https://github.com/RosalindFranklinInstitute/rfi-downloader/issues

[options]
include_package_data = True
install_requires =
    PyGobject
    humanfriendly
    bugsnag
packages = find:
python_requires = >=3.8
zip_safe = False

[options.entry_points]
gui_scripts =
    rfi-downloader = rfi_downloader.__main__:main

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
